adapted view-updatecheck
removed the display of changes, this as there is already a link to a
page where people can find information. Also added padding+line height
to the css for a better display

--- a/media/css/backend.css
+++ b/media/css/backend.css
@@ -358,6 +358,12 @@ table.adminlist
 	border:1px solid #999999;
 }
 
+table.adminlist td {
+	padding-left:6px;
+	line-height:20px;
+}
+
+
 input#csvexport{
     background:#CCCCCC url('../images/export_excel2.png') no-repeat left;
     padding-left:24px;
