--- a/media/css/backend.css
+++ b/media/css/backend.css
@@ -363,14 +363,17 @@ table.adminlist td {
 	line-height:20px;
 }
 
-
 input#csvexport{
-    background:#CCCCCC url('../images/export_excel2.png') no-repeat left;
-    padding-left:24px;
-    border:1px solid #808080;
-    height:24px;
-    cursor:pointer;
+	padding-left:30px;
+	background-image:url('../images/export_excel2.png');
+	background-repeat:no-repeat;
+	background-position:4px center; 
 }
+
+.icon-back:before {
+	content: "\e012";
+}
+
 
 .select_country
 {
